nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__dict with one entry.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            name!(Type): Name(
                name!(Catalog),
            ),
        },
    ),
)
