nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__empty name key.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            "": Name(
                Name(
                    [
                        105,
                        100,
                    ],
                ),
            ),
        },
    ),
)
