nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__nested.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            "Inner": Dictionary(
                Dictionary(
                    {},
                ),
            ),
        },
    ),
)
