nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__null.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_indirect_object(buf.as_ref()).unwrap()
---
(
    [],
    IndirectObjectDef(
        ObjectId {
            id: RuntimeObjectId(
                1,
            ),
            generation: 0,
        },
        Null,
    ),
)
