nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__simple.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_reference(buf.as_ref()).unwrap()
---
(
    [],
    Reference(
        ObjectId {
            id: RuntimeObjectId(
                1,
            ),
            generation: 0,
        },
    ),
)
