nipdf/src/parser/object/snapshots/nipdf__parser__object__tests__string value.snap
---
source: nipdf/src/parser/object/tests.rs
expression: parse_dict(buf.as_ref()).unwrap()
---
(
    [],
    Dictionary(
        {
            Name(
                Right(
                    "id",
                ),
            ): LiteralString(
                LiteralString(
                    [],
                ),
            ),
        },
    ),
)
